# Distributed-TROTS

./: .gitignore  .gitmodules  CMakeLists.txt  EigenSparseMat.h  LICENSE  MKL_sparse_matrix.h  Makefile  OptimizationProblem.h  README.md  SparseMat.h  TROTSEntry.cpp  TROTSEntry.h  main.cpp  trots.cpp  trots.h  trots_ipopt.cpp  trots_ipopt.h  trots_matfile_data.cpp  util.h
ipopt_driver/: CMakeLists.txt  main.cpp  trots_ipopt.cpp
ipopt_mpi_driver/: CMakeLists.txt  data_distribution.cpp  data_distribution.h  debug_utils.h  globals.h  main.cpp  rank_local_data.cpp  rank_local_data.h  sparse_matrix_transfers.cpp  sparse_matrix_transfers.h  test_distrib.cpp  test_distrib.h  trots_entry_transfers.cpp  trots_entry_transfers.h  trots_ipopt_mpi.cpp  trots_ipopt_mpi.h
test/: CMakeLists.txt  main.cpp
trots_lib/: CMakeLists.txt  EigenSparseMat.h  MKL_sparse_matrix.h  SparseMat.h  TROTSEntry.cpp  TROTSEntry.h  trots.cpp  trots.h  trots_matfile_data.cpp  trots_matfile_data.h  util.cpp  util.h
